[package]
name = "torc_sub_scheduler"
version = "0.1.0"
authors = ["Marcel Neuhausler <neuhausler@gmail.com>"]

[dependencies.mesos]
git = "https://github.com/att-innovate/mesos-rs.git"
version = "0.3.1"

[dependencies.protobuf]
version = "1.0.23"

[dependencies.iron]
version = "0.3.0"

[dependencies.router]
version = "0.1.1"

[dependencies.hyper]
version = "0.8.1"

[dependencies.clap]
version = "2.9.2"

[dependencies.yaml-rust]
version = "0.3.3"

[dependencies.rustc-serialize]
version = "0.3"

[dependencies.uuid]
version = "0.1"

[dependencies.chrono]
version = "0.2"

[dependencies.lazy_static]
version = "0.2.1"
